--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cool-website",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://shriwastaken.github.io/",
+  "homepage": "https://shriwastaken.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
